<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"


        android:layout_above="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"


        android:layout_marginRight="0dp"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"



        android:layout_centerInParent="true"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" tools:targetApi="o" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignStart="@+id/password"

        android:layout_alignLeft="@+id/password"
        android:layout_alignTop="@+id/register"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_toStartOf="@+id/register"
        android:layout_toLeftOf="@+id/register"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"


        android:layout_alignEnd="@+id/password"


        android:layout_alignRight="@+id/password"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/register" />

    <CheckBox
        android:id="@+id/checkBox"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkbox" />
</RelativeLayout>